修復了BUG、優化代碼、因修改會員消息加載失敗時吐司通知。

--- a/app/src/main/res/layout/fragment_buttom.xml
+++ b/app/src/main/res/layout/fragment_buttom.xml
@@ -34,8 +34,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView18"
-        />
+        app:layout_constraintStart_toEndOf="@+id/textView18" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/half_parent_width"
