--- a/app/src/main/res/drawable/help_edittext.xml
+++ b/app/src/main/res/drawable/help_edittext.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#30FFFFFF" />
     <corners android:radius="200dp" />
     <stroke
         android:width="2.5px"
-        android:color="#707070"
-        />
+        android:color="#707070" />
 </shape>
