--- a/app/src/main/res/layout-en/fragment_buttom.xml
+++ b/app/src/main/res/layout-en/fragment_buttom.xml
@@ -33,8 +33,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" 
-        />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/half_parent_width"
