--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Help"
-    android:background="@drawable/layout">
+    android:background="@drawable/layout"
+    tools:context=".Help">
 
     <EditText
         android:id="@+id/input"
@@ -17,8 +17,8 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/help_edittext"
         android:ems="10"
-        android:hint="向客服查詢問題或...聊天🤔"
         android:gravity="center"
+        android:hint="向客服查詢問題或...聊天🤔"
         android:inputType="textLongMessage|textMultiLine|textPersonName|textEmailAddress"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,12 +30,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:contentDescription="TODO"
+        android:focusable="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/input"
-        app:srcCompat="@android:drawable/ic_menu_send"
-        android:contentDescription="TODO"
-        android:focusable="true" />
+        app:srcCompat="@android:drawable/ic_menu_send" />
 
     <ScrollView
         android:id="@+id/scroll"
