優化代碼，禁測試入員進入

--- a/app/src/main/res/layout-land/activity_home.xml
+++ b/app/src/main/res/layout-land/activity_home.xml
@@ -8,7 +8,6 @@
     tools:context=".Home">
 
     <ImageView
-        android:id="@+id/imageView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="111dp"
@@ -18,8 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logon_gc" />
 
-    <fragment
-        android:id="@+id/fragment"
+    <androidx.fragment.app.FragmentContainerView
         android:name="com.chinews.xdapp.Bottom"
         android:layout_width="0dp"
         android:layout_height="80dp"
