--- a/app/src/main/res/layout/listviewop.xml
+++ b/app/src/main/res/layout/listviewop.xml
@@ -11,7 +11,8 @@
     android:shadowDx="0"
     android:shadowDy="3"
     android:shadowRadius="10"
-    tools:context=".Listview">
+    tools:context=".Listview"
+    tools:ignore="UsingOnClickInXml">
 
     <TextView
         android:id="@+id/textView36"
