--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -178,13 +178,16 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/f"
         android:name="com.chinews.xdapp.Bottom"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:label="fragment_buttom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_buttom" />
+        tools:layout="@layout/fragment_buttom"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView13"
