--- a/app/src/main/res/layout-sw600dp-land/activity_home.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_home.xml
@@ -76,6 +76,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/f"
         android:name="com.chinews.xdapp.Bottom"
         android:layout_width="0dp"
         android:layout_height="80dp"
