--- a/app/src/main/res/layout-sw600dp-land/activity_home.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_home.xml
@@ -75,15 +75,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-    <androidx.fragment.app.FragmentContainerView
+    <fragment
         android:id="@+id/f"
+        class="com.chinews.xdapp.Bottom"
         android:name="com.chinews.xdapp.Bottom"
         android:layout_width="0dp"
         android:layout_height="80dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout="@layout/fragment_buttom" />
+        tools:layout="@layout/fragment_buttom"
+        tools:ignore="FragmentTagUsage" />
 
     <ImageView
         android:id="@+id/imageView"
