初步完成最新日報,優化代碼

--- a/app/src/main/res/layout/activity_viplist.xml
+++ b/app/src/main/res/layout/activity_viplist.xml
@@ -6,13 +6,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/layout"
-    tools:context=".Listview">
+    tools:context=".VipRecyclerView">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/layout"
-        tools:context=".Listview">
+        tools:context=".VipRecyclerView">
 
         <TextView
             android:id="@+id/textView30"
@@ -59,7 +59,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView31"
-            tools:listitem="@layout/listviewop" />
+            tools:listitem="@layout/viplistopt" />
 
         <View
             android:layout_width="fill_parent"
