--- a/app/src/main/res/layout/activity_old_news.xml
+++ b/app/src/main/res/layout/activity_old_news.xml
@@ -14,7 +14,7 @@
         android:background="@drawable/help_edittext"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/reclist"
