--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -181,7 +181,7 @@
         android:id="@+id/fragment2"
         android:name="com.chinews.xdapp.Bottom"
         class="com.chinews.xdapp.Bottom"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="80.0dip"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
