--- a/app/src/main/res/layout/activity_vvip.xml
+++ b/app/src/main/res/layout/activity_vvip.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:elevation="5dp"
         android:gravity="center"
         android:shadowColor="@color/shadow"
         android:shadowDx="0"
@@ -36,7 +35,6 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:elevation="5dp"
         android:gravity="center"
         android:shadowColor="@color/shadow"
         android:shadowDx="0"
@@ -115,7 +113,7 @@
         android:id="@+id/textViewaa"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="會員搶先看"
+        android:text="@string/bq"
         android:textColor="@color/text"
         android:textSize="20sp"
         android:textStyle="bold"
